# macroeconomic-data-forecast-app

./: .gitignore  CONTRIBUTORS.md  README.md  REQUIREMENTS.md  app.py  pyproject.toml  requirements.txt  teste.py
.github/workflows/: ci.yml  tests.yml
notebooks/: init_data.ipynb
src/: data_processing.py  init_data.py  main.py  model_registry.py  model_training.py  visualization.py  viz.py
src/controller/: app.py
src/model/: data_processing.py  model_registry.py  model_training.py
src/view/: export_utils.py  ui_components.py  visualization.py
tests/: test.py  test_business_rules.py  test_data_processing.py  test_model_training.py  test_visualization.py  test_wbgdata.py
